--- a/TLCS/training_settings.ini
+++ b/TLCS/training_settings.ini
@@ -18,7 +18,8 @@ memory_size_min = 600
 memory_size_max = 50000
 
 [agent]
-num_states = 80
+# num_states = 80
+num_states = 160
 num_actions = 4
 gamma = 0.75
 
